# ai-powerhouse

./: .env.example  .gitignore  README.md  agents install  ai-compare.ps1  cli.py  pyproject.toml  test-auth.js
.github/: ai-powerhouse-global-config.md  copilot-instructions.md
AI-Powerhouse-Framework/: FRAMEWORK-OVERVIEW.md  Install-AIPowerhouseFramework.ps1
AI-Powerhouse-Framework/Documentation/: QUICK-REFERENCE.md  README.md
AI-Powerhouse-Framework/Integration/: AIPowerhouse.psm1  unified_ai_bridge.py
AI-Powerhouse-Framework/VSCodeConfig/: keybindings.json  tasks.json
Agents/Electronics agents/: ELECTRONICS-AGENT-UK-PRICING-GUIDE.md  Invoke-ElectronicsAgent.ps1
ClaudeAgents-Installer/: Test-NewAgents.ps1  Validate-ClaudeAgents.ps1
ClaudeAgents-Installer/AgentPrompts/: code-review-agent.txt  database-agent.txt  debugging-agent.txt  documentation-agent.txt  electronics-agent.txt  n8n-agent.txt  refactoring-agent.txt  research-agent.txt
ClaudeAgents-Installer/Documentation/: README.md
ClaudeAgents-Installer/PowerShellModule/: ClaudeAgents.psd1  (+1 more)
ai_powerhouse/: __init__.py  config.py  core.py
examples/: basic_usage.py
global-setup/: AI-Auto-Integration.ps1  AI-COMMANDS.md  AI-Powerhouse-Global-Profile.ps1  AIHelpers.psd1  AIHelpers.psm1  Enable-AI-Auto.ps1  Install-AIPowerhouseGlobal.ps1  Microsoft.VSCode_profile.ps1  New-AIPoweredProject.ps1  Setup-AIEnvironment-PS51.ps1  Setup-AIEnvironment.ps1  agents.code-snippets  global.code-snippets  python.json  settings-additions.json  vscode-ai-powerhouse-settings.json
tests/: __init__.py  test_config.py
(+39 files in other folders)
